Final change to Article 1

--- a/Lab2/constitution.html
+++ b/Lab2/constitution.html
@@ -552,6 +552,7 @@
               <p>- The House can choose its Speaker and other officers and can bring charges against federal officials (impeachment).</p>
             </div>
 
+
             <p><b>Senate (Section 3):</b></p>
             <div class="indent">
               <p><b>Qualifications:</b></p>
@@ -560,19 +561,23 @@
               <p>- Live in the state you represent.</p>
               <p><b>Composition:</b></p>
               <p>- Unlike the House, instead of composition being population-based, each state gets 2 Senators serving 6-year terms, each with one vote.</p>
-              <p>- ...</p>
+              <p>- Senators are divided into 3 classes. Being in first class means your term ends in 2 years, being in second class means it ends in 4, and being in third class means it ends in 6.</p>
+              <p>- If a seat is vacant when legislature is out, then the governor can make a temporary appointment until the next legislature meeting.</p>
               <p><b>Leadership:</b></p>
-              <p>- ...</p>
-            </div>
+              <p>- The Vice President is the President of the Senate and has one vote. The Senate can choose its officers and also select a President pro tempore if the Vice President is absent.</p>
+              <p>- The Senate can try impeachments, in which all Senators are under oath. A person can be convicted only if 2/3 of the Senate is present. If the President is tried, then the Chief Justice must be there. Lastly, impeachment only means removal from office, but the person can still be subject to criminal trial in court.</p>
+              </div>
+
 
             <p><b>Elections, Meetings, Rules, and Proceedings (Sections 4 and 5):</b></p>
             <div class="indent">
               <p>- Each state's legislatures can set the times, places, and manner of congressional elections but Congress can change all these, except for the place of electing Senators.</p>
-              <p>- Congress has to meet once a year on the first Monday in December.</p>
+              <p>- Congress has to meet once a year on the first Monday in December (changed to January 3)</p>
               <p>- Each House is the judge of its own members, and a majority in each House is required to do business - they can force absent members to attend.</p>
               <p>- Each House can set its own rules and can expel a member with 2/3 vote. Each House also keeps a journal of proceedings (except secrets), and can demand that yes's/no's be recorded on that journal with a 1/5 vote.</p>
               <p>- None of the Houses can adjourn for more than 3 days or move elsewhere without the consent of the other House. </p>
             </div>
+
 
             <p><b>Member Rights (Section 6):</b></p>
             <div class="indent">
@@ -585,7 +590,7 @@
             <p><b>How Laws are Passed (Section 7):</b></p>
             <div class="indent">
               <p>- All bills regarding revenue start in the House, but the Senate can amend them.</p>
-              <p>- A bill must be signed by the President (or left unattended for 10 days) to become a law. If vetoed, then a 2/3 vote in both Houses will overturn it and make it into a law.</p>
+              <p>- A bill must be signed by the President (or left unattended for 10 days not including Sundays) to become a law. If vetoed, then a 2/3 vote in both Houses will overturn it and make it into a law.</p>
               <p>- Any order/measure that requires both Houses to approve is sent to the President, and if vetoed, can still be passed with a 2/3 vote in both Houses, like a bill (stated above).</p>
             </div>
 
@@ -601,7 +606,7 @@
               <p>- Declaring war, issuing letters of marque for privateering, and setting rules for captures.</p>
               <p>- Raising and supporting armies (appropriations for no longer than 2 years), maintaining a navy, and setting rules for the armed forces.</p>
               <p>- Calling forth militias to execute the laws, suppress insurrections, repel invasions, and disciplining them.</p>
-              <p>- The right to punish offenses on the high seas or against international law.</p>
+              <p>- The right to punish any offense at sea or against international law.</p>
               <p><b>Other:</b></p>
               <p>- Creating inferior courts below the Supreme Court.</p>
               <p>- Establishing uniform naturalization and bankruptcy laws nationwide.</p>
@@ -616,15 +621,21 @@
             <p><b>Restrictions on Congress and the States (Sections 9 and 10):</b></p>
             <div class="indent">
             <p><b>Congressional Restrictions:</b></p>
-            <p>- ...</p>
-            <p>- ...</p>
-            <p>- ...</p>
-            <p>- ...</p>
+            <p>- Congress couldn't ban slave trade until 1808 but could tax $10 per person.</p>
+            <p>- Habeas corpus (the requirement to bring a confined person before a judge) couldn't be suspended unless during a rebellion or invasion.</p>
+            <p>- Direct taxes have to be in proportion to the census (later changed to allow income tax).</p>
+            <p>- Congress is not allowed to tax exports from States or show favoritism for one State's ports over another or force ships to pay duties in other States.</p>
+            <p>- All money drawn from Treasury must be through law and recorded.</p>
+            <p>- No titles of nobility, which means hereditary positions of government. No official can accept foreign gifts or titles without Congressional approval.</p>
+            <p>- No bills of attainder (declare a person guilty without trial) or ex-post facto laws (punishing actions done at a time at which they were legal).</p>
+            
+
             <p><b>State Restrictions:</b></p>
             <p>- States can't make treaties or alliances with other nations. It would be bad if Texas and France were allied but the U.S. and France were at war...</p>
-            <p>- States also can't issue letters of marque, coin money, or make anything but gold/silver legal tender. That's Congress' job.</p>
+            <p>- States also can't issue letters of marque, coin money, or make anything but gold/silver legal tender. That's Congress's job.</p>
             <p>- States also can't impose any import/export duties apart from inspection fees without the approval of Congress. Any revenue from duties goes straight to the Treasury.</p>
-            <p>- Finally, States can't keep armies or navies around or engage in war unless they are invaded or in grave danger.</p>
+            <p>- Like Congress, States can't have bills of attainder, ex-post facto laws, and titles of nobility. States can't change contracts.</p>
+            <p>- Finally, States can't keep armies or navies around in peacetime or engage in war unless they are invaded or in grave danger.</p>
             </div>
 
             <div class = "extra-white-space"></div>
