--- a/Lab2/constitution.html
+++ b/Lab2/constitution.html
@@ -665,11 +665,15 @@
           break;
         case 'article3':
           title.textContent = 'Article III Analysis';
-          content.innerHTML = '<p>Analysis content for Article III will go here.</p>';
+          content.innerHTML = '<p>Article Three outlines the judicial branch of the federal government. It structures judicial power as a system of courts with the power of law interpretation, applied to individual cases in order to administer justice.</p>';
+          content.innerHTML += '<p> <b>Vesting Clause</b> <br/> <br/> Judicial power is held in one <u>Supreme Court</u>, as well as any lower federal courts established by Congress.<br/> <br/> Judges hold their offices “during good Behavior”, otherwise known as <u>judicial tenure</u>. This grants them security in their position for life, unless they are convicted or <u>impeached</u> (charged with misconduct). As a means of allowing the judicial branch to maintain independence from the other branches, judges’ salaries cannot be reduced while they remain in office, either.</p>';
+          content.innerHTML += '<p> <b>Justiciability</b> <br/> <br/> Judicial power allows the federal courts to hear any variety of cases arising under the Constitution or parties involved with the U.S. government. The courts can also hear disputes, whether between two or more states, between citizens of different states, or between (the citizens of) a state and foreign countries. <br/> <br/> The Supreme Court has different types of <u>jurisdictions</u> (legal authority) depending on the case. For cases involving ambassadors and those in which a state is a party, this is original jurisdiction, the authority to hear and decide a case for the first time without <u>appellate reviews</u> (appeals from lower courts). All other cases involve <u>appellate jurisdiction.</u> <br/> <br/> All criminal cases are granted a <u>trial by jury</u>, excluding cases of impeachment. The trial must be held in the state where the crime was committed. </p>';
+          content.innerHTML += '<p> <b>Treason</b> <br/> <br/> The crime of treason against the U.S. is finely outlined to prevent political abuse of it. Treason consists only of <u>levying</u> (waging) war against the U.S. or adhering to enemies by providing aid and comfort. <br/> <br/> Conviction of treason requires either a testimony of two witnesses to the same act, or a confession in open court. <br/> <br/> Congress may enact punishment for treason, but it cannot be passed to family or heirs. </p>';
           break;
         case 'article4':
           title.textContent = 'Article IV Analysis';
           content.innerHTML = '<p>Analysis content for Article IV will go here.</p>';
+          content.innerHTML += '<p></p>';
           break;
         case 'article5':
           title.textContent = 'Article V Analysis';
