Added History of Constitution Page + Acccompanying CSS and Nav

--- a/Lab2/constitution.html
+++ b/Lab2/constitution.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="Resources/styles.css">
 </head>
 <body>
+  <h1 class = "nav"><span style="color: black">Constitution &amp; Analysis</span> | <a href="history.html">History of the Constitution</a></h1>
   <h1 class = "main-title">The Constitution of the United States</h1>
 
   <!-- Preamble -->
