--- a/Lab2/constitution.html
+++ b/Lab2/constitution.html
@@ -672,8 +672,11 @@
           break;
         case 'article4':
           title.textContent = 'Article IV Analysis';
-          content.innerHTML = '<p>Analysis content for Article IV will go here.</p>';
-          content.innerHTML += '<p></p>';
+          content.innerHTML = '<p>Article Four outlines the relationships the states have with both each other and the federal government. It centers around <u>federalism</u>, which divides powers between the national government and the states, and the relationship they have with each other.';
+          content.innerHTML += '<p> <b>Full Faith and Credit Clause</b> <br/> <br/> States must respect each other’s laws, records, and court rulings. That is, legal documents (e.g. birth certificates, civil court judgements) originating from one state must be honored in all other states. Congress may dictate how these records are proved, and to which effect.</p>';
+          content.innerHTML += '<p> <b>Interstate Comity</b> <br/> <br/> Citizens of each state are entitled to all the “Privileges and Immunities” of citizens in the several states. States may not discriminate against visitors from other states, e.g. New York citizens have the same national rights as Floridian citizens. However, political rights such as voting may be reserved for a state’s own citizens. <br/> <br/> Regarding crime, a person charged in one state who flees to another must face <u>extradition</u>, the process of returning the person to the state where the crime was committed. <br/> <br/> The same clause used to require escaped slaves to be returned to their owners, even if they fled to a free state, but this was overturned by the 13th Amendment which abolished slavery.</p>';
+          content.innerHTML += '<p> <b>New States and Federal Property</b> <br/> <br/> Congress may admit new states into the United States, but they cannot be created within the jurisdiction of an existing state, or by merging two states without the consent of the states’ legislature. <br/> <br/> Additionally, Congress may create “Rules and Regulations” overseeing all U.S. territories and other federal properties, which can include establishments such as national parks and military bases.</p>';
+          content.innerHTML += '<p> <b>Republican Form of Government</b> <br/> <br/> The federal government guarantees every state the right to a “Republican Form of Government”, i.e. a <u>representative government</u> rather than a monarchy and dictatorship, as well as promising to protect each state from both invasion and <u>domestic violence</u> (e.g. insurrections or riots). </p>';
           break;
         case 'article5':
           title.textContent = 'Article V Analysis';
