--- a/Lab2/constitution.html
+++ b/Lab2/constitution.html
@@ -694,11 +694,17 @@
           break;
         case 'article6':
           title.textContent = 'Article VI Analysis';
-          content.innerHTML = '<p>Analysis content for Article VI will go here.</p>';
+          content.innerHTML = '<p>Article VI is about making sure the new government under the Constitution paid its bills.  It states that all the debts the country had taken on before the Constitution was adopted were still valid. This was a crucial move to establish the financial credibility of the United States and show the world that it would honor its commitments, even under a new system of government. <br/>\
+                              <br/>\
+                              <b>Honoring Debts</b><br/>\
+                              This section, known as the Supremacy Clause, sets up a clear hierarchy of laws. It declares that the U.S. Constitution, federal laws made in accordance with it, and U.S. treaties are the "supreme Law of the Land." This means that if a states constitution or laws conflict with these federal authorities, the state law is overruled. It is the ultimate rule that ensures national laws apply consistently across all states.<br/>\
+                              <br/>\
+                              <b>Oaths</b><br/>\
+                              This part has two important requirements. First, it mandates that all federal and state officials must swear an oath to support the U.S. Constitution, ensuring their primary loyalty is to the nations foundational document. Second, it explicitly states that no religious test can ever be required to hold public office in the United States. This was a groundbreaking commitment to religious freedom, ensuring that a persons faith (or lack thereof) could not disqualify them from serving the public.</p>';
           break;
         case 'article7':
           title.textContent = 'Article VII Analysis';
-          content.innerHTML = '<p>Analysis content for Article VII will go here.</p>';
+          content.innerHTML = '<p>Article VII explains how the Constitution itself would officially become the law of the land. Instead of requiring all thirteen original states to agree, which would have been nearly impossible, it set the bar at nine. This meant that once nine states held special conventions and voted to approve it, the Constitution would go into effect for those nine states. This was a practical decision that allowed the new framework to move forward without being blocked by a few holdout states.</p>';
           break;
         case 'amendment1':
           title.textContent = 'Amendment I Analysis';
@@ -748,11 +754,23 @@
           break;
         case 'amendment6':
           title.textContent = 'Amendment VI Analysis';
-          content.innerHTML = '<p>Analysis content for Amendment VI will go here.</p>';
-          break;
+          content.innerHTML = '<p>The 6th Amendment is a fair rulebook for anyone accused of a crime. It says that if the government comes after you, you have the right to a subtle public trial.</p>';
+          content.innerHTML += '<p>The "subtle" part stops them from letting you sit in jail forever without a resolution, and the "public" part means everything happens out in the open to keep everyone honest.</p>';
+          content.innerHTML += '<p>You also get a jury that is and from the local area where the crime supposedly happened, which is meant to give you a fair shot with people who understand the context.</p>';
+          content.innerHTML += '<p>Crucially, they have to tell you exactly what you are being charged with, no secret accusations. One of the biggest rights is that you get to confront anyone who testifies against you, face to face, so your lawyer can question them and challenge their story. </p>';
+          content.innerHTML += '<p>On top of that, you have the power to force witnesses who might help your case to come to court and testify for you. </p>';
+          content.innerHTML += '<p>And finally, you have the right to a lawyer, because you should not have to fight the government legal team by yourself. Altogether, it is all about balancing the scales and making sure the system is fair when someone freedom is on the line.</p>';
+
+
+          break;              
         case 'amendment7':
           title.textContent = 'Amendment VII Analysis';
-          content.innerHTML = '<p>Analysis content for Amendment VII will go here.</p>';
+          content.innerHTML = '<p>The 7th Amendment deals with civil lawsuits, not criminal cases. It guarantees that in most legal disputes where the amount of money involved is more than twenty dollars, the right to a trial by jury is protected.</p>';
+          content.innerHTML += '<p>This means you can choose to have your case decided by a group of fellow citizens instead of just a judge.</p>';
+          content.innerHTML += '<p>The second part is crucial: it states that once a jury has heard the evidence and made a decision on the facts of a case, that decision is final.</p>';
+          content.innerHTML += '<p>No higher court is allowed to re-try the case, re-hear the evidence, or simply overturn the jury factual conclusions.</p>';
+          content.innerHTML += '<p>An appeals court can only step in if there was a major legal mistake in how the trial was conducted.</p>';
+          content.innerHTML += '<p>An appeals court can only step in if there was a major legal mistake in how the trial was conducted.</p>';
           break;
         case 'amendment8':
           title.textContent = 'Amendment VIII Analysis';
